--- a/detectors/tpc/alignment/CMakeLists.txt
+++ b/detectors/tpc/alignment/CMakeLists.txt
@@ -4,6 +4,7 @@ set(INCLUDE_DIRECTORIES
  ${BASE_INCLUDE_DIRECTORIES}
  ${CMAKE_CURRENT_LIST_DIR}
  ${CMAKE_CURRENT_LIST_DIR}/muons
+ ${CMAKE_SOURCE_DIR}/detectors/tpc/
  ${CMAKE_SOURCE_DIR}/detectors/tpc/geometry
 )
 
