--- a/core/mpdDst/CMakeLists.txt
+++ b/core/mpdDst/CMakeLists.txt
@@ -10,6 +10,8 @@ set(INCLUDE_DIRECTORIES
   ${CMAKE_SOURCE_DIR}/core/mpdField
   ${CMAKE_SOURCE_DIR}/core/mpdPid
   ${CMAKE_SOURCE_DIR}/detectors/emc/emcKI
+  ${CMAKE_SOURCE_DIR}/detectors/multi
+  ${CMAKE_SOURCE_DIR}/detectors/tpc
   ${CMAKE_SOURCE_DIR}/detectors/tpc/pid
   ${CMAKE_SOURCE_DIR}/detectors/tof
   ${CMAKE_SOURCE_DIR}/detectors/zdc
@@ -42,6 +44,6 @@ set(SRCS
 Set(HEADERS)
 Set(LINKDEF MpdDstLinkDef.h)
 Set(LIBRARY_NAME MpdDst)
-Set(DEPENDENCIES MpdMiniEvent tpcPid)
+Set(DEPENDENCIES MpdMiniEvent multi)
 
 GENERATE_LIBRARY()
