QA Engine: adding to runReco & QA implementations for specific modules to be called in their interface's Finish method

--- a/detectors/tpc/CMakeLists.txt
+++ b/detectors/tpc/CMakeLists.txt
@@ -3,6 +3,7 @@
 set(INCLUDE_DIRECTORIES
   ${BASE_INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_LIST_DIR}
+  ${CMAKE_SOURCE_DIR}/tools/tdd/QA
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
@@ -35,6 +36,6 @@ Set(HEADERS
 
 Set(LINKDEF tpcLinkDef.h)
 Set(LIBRARY_NAME tpc)
-Set(DEPENDENCIES )
+Set(DEPENDENCIES QA)
 
 GENERATE_LIBRARY()
