Added dependencies between several libraries since ROOT has problem automatically loading them in correct order.

--- a/core/mpdField/CMakeLists.txt
+++ b/core/mpdField/CMakeLists.txt
@@ -39,6 +39,6 @@ set(SRCS
 Set(HEADERS)
 Set(LINKDEF FieldLinkDef.h)
 Set(LIBRARY_NAME MpdField)
-Set(DEPENDENCIES)
+Set(DEPENDENCIES Base ParBase)
 
 GENERATE_LIBRARY()
