QA Engine: redesign AbstractQA to BaseQA, get rid of static switch, engine working by DI

--- a/core/mpdDst/CMakeLists.txt
+++ b/core/mpdDst/CMakeLists.txt
@@ -18,6 +18,7 @@ set(INCLUDE_DIRECTORIES
   ${CMAKE_SOURCE_DIR}/reconstruction/tracking/kalman
   ${CMAKE_SOURCE_DIR}/reconstruction/tracking/lheTrack
   ${CMAKE_SOURCE_DIR}/simulation/mcStack
+  ${CMAKE_SOURCE_DIR}/tools/tdd/QA
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
