--- a/physics/photons/CMakeLists.txt
+++ b/physics/photons/CMakeLists.txt
@@ -3,6 +3,7 @@ set(INCLUDE_DIRECTORIES
   ${CMAKE_SOURCE_DIR}/core/mpdBase
   ${CMAKE_SOURCE_DIR}/core/mpdPid
   ${CMAKE_SOURCE_DIR}/detectors/emc/emcKI
+  ${CMAKE_SOURCE_DIR}/physics/evPID
   ${CMAKE_SOURCE_DIR}/physics
   ${CMAKE_SOURCE_DIR}/physics/photons
   ${CMAKE_SOURCE_DIR}/reconstruction/tracking/kalman
