--- a/detectors/tpc/CMakeLists.txt
+++ b/detectors/tpc/CMakeLists.txt
@@ -3,6 +3,10 @@
 set(INCLUDE_DIRECTORIES
   ${BASE_INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_LIST_DIR}
+  ${CMAKE_SOURCE_DIR}/reconstruction/tracking/kalman
+  ${CMAKE_SOURCE_DIR}/detectors/tpc/digitizer/AZlt
+  ${CMAKE_SOURCE_DIR}/detectors/tpc/clusterHitFinder/mlem
+  ${CMAKE_SOURCE_DIR}/detectors/tpc/clusterHitFinder/fast
   ${CMAKE_SOURCE_DIR}/tools/tdd/QA
 )
 
