Analysis: photon update (O.Golosov, D.Peressounko) - added eta axis, V0 selection using MVA, fixed event mixing, etc.

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -54,6 +54,7 @@
 
 # Analysis
 #----------------------------------------------------------------------------------
+/physics/photons/                        @peressounko
 /core/mpdDst/MpdMiniEvent/               @gnigmat
 
 
