Added missing interlibrary dependencies. Fixed formatting of several CMakeLists.txt files inside physics/* directories

--- a/core/mpdDst/CMakeLists.txt
+++ b/core/mpdDst/CMakeLists.txt
@@ -48,6 +48,6 @@ set(SRCS
 Set(HEADERS)
 Set(LINKDEF MpdDstLinkDef.h)
 Set(LIBRARY_NAME MpdDst)
-Set(DEPENDENCIES MpdMiniEvent multi)
+Set(DEPENDENCIES MpdMiniEvent multi MpdBase MpdField Tof MpdMCStack Kalman MpdGen UniGenFormat tpcPid)
 
 GENERATE_LIBRARY()
