--- a/tools/tdd/QA/CMakeLists.txt
+++ b/tools/tdd/QA/CMakeLists.txt
@@ -1,5 +1,4 @@
 # Create a library called "libQA" which is library for generating QA plots
-
 set(INCLUDE_DIRECTORIES
   ${BASE_INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_LIST_DIR}
@@ -10,7 +9,7 @@ set(INCLUDE_DIRECTORIES
   ${CMAKE_SOURCE_DIR}/reconstruction/tracking/kalman
 )
 
-Set(SYSTEM_INCLUDE_DIRECTORIES
+set(SYSTEM_INCLUDE_DIRECTORIES
   ${ROOT_INCLUDE_DIR}
 )
 
@@ -25,18 +24,17 @@ link_directories(${LINK_DIRECTORIES})
 
 # List of source files
 set(SRCS
- BaseQA.cpp
- QA_TpcClusterHitFinder.cxx
+  BaseQA.cpp
+  QA_TpcClusterHitFinder.cxx
 )
 
-Set(HEADERS
- BaseQA.h
- QA_TpcClusterHitFinder.h
+set(HEADERS
+  BaseQA.h
+  QA_TpcClusterHitFinder.h
 )
 
-
-Set(LINKDEF qaLinkDef.h)
-Set(LIBRARY_NAME QA)
-Set(DEPENDENCIES )
+set(LINKDEF qaLinkDef.h)
+set(LIBRARY_NAME QA)
+set(DEPENDENCIES FairTools Physics)
 
 GENERATE_LIBRARY()
